hphp/test/slow/class_type_constant/recursion_param_type.php.expectf
Catchable fatal error: Argument 1 passed to f() must be an instance of D<C::A>, D<int> given in %s/recursion_param_type.php on line 16
